SimpleChatTC: Tool Calling UI elements use up horizontal space

--- a/tools/server/public_simplechat/index.html
+++ b/tools/server/public_simplechat/index.html
@@ -42,11 +42,15 @@
 
             <hr>
             <div id="tool-div">
+                <div>
                 <div class="sameline">
-                    <textarea id="toolname-in" rows="1" placeholder="name of tool to run"></textarea>
+                    <textarea id="toolname-in" class="flex-grow" rows="1" placeholder="name of tool to run"></textarea>
                     <button id="tool-btn">run tool</button>
                 </div>
+                </div>
+                <div class="sameline">
                 <textarea id="toolargs-in" class="flex-grow" rows="2" placeholder="arguments to pass to the specified tool"></textarea>
+                </div>
             </div>
 
             <hr>
