SimpleChatTC:UI:ClearChat, Unicode icons for Clear, settings
Allow user to clear the existing chat. The user does have the
option to load the just cleared chat, if required.

Add icons wrt clearing chat and settings.

--- a/tools/server/public_simplechat/index.html
+++ b/tools/server/public_simplechat/index.html
@@ -24,7 +24,10 @@
 
             <div class="sameline" id="heading">
                 <p class="heading flex-grow" > <b> SimpleChat </b> </p>
-                <button id="settings">Settings</button>
+                <div>
+                <button id="clearchat">&#x1F9F9; ClearChat</button>
+                <button id="settings">&#x2699; Settings</button>
+                </div>
             </div>
 
             <div id="sessions-div" class="sameline"></div>
