SimpleChatTC:Cleanup:Make main chat related classes importable
Have main classes defined independent of and away from runtime flow

Move out the entry point including runtime instantiation of the
core Me class (which inturn brings other class instances as neede)
into its own main.js file.

With this one should be able to import simplechat.js into other
files, where one might need the SimpleChat or MultiChat or Me class
definitions.

--- a/tools/server/public_simplechat/index.html
+++ b/tools/server/public_simplechat/index.html
@@ -11,12 +11,13 @@
         <script type="importmap">
             {
                 "imports": {
+                    "simplechat": "./simplechat.js"
                     "datautils": "./datautils.mjs",
                     "ui": "./ui.mjs"
                 }
             }
         </script>
-        <script src="simplechat.js" type="module" defer></script>
+        <script src="main.js" type="module" defer></script>
         <link rel="stylesheet" href="simplechat.css" />
     </head>
     <body>
